feat: use new matadata shortener
