# docs/openapi.yaml
@@ -99,12 +99,15 @@ components:
           description: Tx shortened metadata on hex format
     TxPayload:
       required:
-        - txBlob
+        - callData
+        - signedExtensions
         - chainConfig
       properties:
-        txBlob:
+        callData:
           type: string
           description: Transaction payload to be signed, in serialized format
+        signedExtensions:
+          type: string
         chain:
           type: object
           properties:
